--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.9'
 
+volumes:
+  db-data:
+    driver: local
+
 services:
   product-service:
     image: product-service
@@ -14,13 +18,13 @@ services:
 
   postgres:
     container_name: postgres-container
-    image: postgres:15-alpine3.18
+    image: postgres:15.1-alpine
     environment:
       - POSTGRES_USER=${POSTGRES_USERNAME}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DATABASE}
     volumes:
-      - ./product-db-data:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
     ports:
       - "5434:5432"
 
