ISSUE-11: REST API (#12)
* Implemented controller layer;
* Open API (Swagger) exposed;
* Validation of an inbound request is integrated;
* Solution covered with unit and integration tests.

--- a/version.gradle
+++ b/version.gradle
@@ -1,7 +1,7 @@
 ext {
     versions = [
-            'mapstruct'     : '1.5.5.Final',
-            'lombok'        : '1.18.30',
-            'testContainers': '1.19.1'
+            'lombok'          : '1.18.30',
+            'springdocOpenApi': '2.2.0',
+            'testContainers'  : '1.19.1'
     ]
 }
