--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,8 +1,7 @@
 spring:
-  sql:
-    init:
-      mode: always
   jpa:
     properties.hibernate:
       show_sql: true
       format_sql: true
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master-test.yaml
