--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,12 @@ dependencies {
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${versions.springdocOpenApi}"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation platform("io.micrometer:micrometer-tracing-bom:${versions.micrometerTracing}")
+    implementation 'io.micrometer:micrometer-tracing'
+    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.liquibase:liquibase-core'
@@ -42,6 +47,9 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation "org.testcontainers:postgresql:${versions.testContainers}"
+    testImplementation 'io.micrometer:micrometer-observation-test'
+    testImplementation "org.logcapture:logcapture-core:${versions.logcapture}"
+    testImplementation "org.logcapture:logcapture-junit5:${versions.logcapture}"
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 }
