--- a/version.gradle
+++ b/version.gradle
@@ -2,6 +2,8 @@ ext {
     versions = [
             'lombok'          : '1.18.30',
             'springdocOpenApi': '2.2.0',
-            'testContainers'  : '1.19.1'
+            'testContainers'  : '1.19.1',
+            'micrometerTracing': '1.0.0',
+            'logcapture' : '1.3.2'
     ]
 }
