--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,5 @@ spring:
     change-log: classpath:db/changelog/db.changelog-master.yaml
 server:
   port: 8080
+  error:
+    include-message: always
