ISSUE-20: Monitoring support * Health is exposed * Liquibase is exposed

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,12 @@ management:
     sampling.probability: 1.0
 
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: liquibase, health
+
 springdoc:
   show-actuator: true
 
