ISSUE-23: Integration/E2E Testing data. * Testing data prepared for being use while integration and E2E tests.

--- a/build.gradle
+++ b/build.gradle
@@ -58,13 +58,22 @@ jar {
     enabled = false
 }
 
+ext {
+    isTest = project.hasProperty('profile') ? project.property('profile') == 'test' : false
+}
+
 bootJar {
     archiveClassifier.set("exec")
+
+    if(!isTest) {
+        exclude '**/changeset/test/**'
+    }
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
 
 publishing {
     publications {
