--- a/e2e/docker-compose-e2e.yml
+++ b/e2e/docker-compose-e2e.yml
@@ -1,16 +1,18 @@
 version: '3.9'
 
 volumes:
-  db-data:
+  db-data-e2e:
     driver: local
 
 services:
   product-service:
     image: product-service
+    container_name: product-service-e2e
     build:
+      context: ../
       dockerfile: Dockerfile
-    container_name: product-service
     environment:
+      SPRING_PROFILES_ACTIVE: test
       HOST: ${HOST}
       POSTGRES_DATABASE: ${POSTGRES_DATABASE}
       POSTGRES_USERNAME: ${POSTGRES_USERNAME}
@@ -22,25 +24,13 @@ services:
       - postgres
 
   postgres:
-    container_name: postgres-container
+    container_name: postgres-e2e
     image: postgres:15.1-alpine
     environment:
       POSTGRES_USER: ${POSTGRES_USERNAME}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DATABASE}
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - db-data-e2e:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
-    container_name: pgadmin_container
-    ports:
-      - "8888:80"
-    depends_on:
-      - postgres
-
