--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,13 @@
 spring:
   application:
     name: product-service
-  config:
-    import: optional:file:.env[.properties]
   datasource:
-    url: jdbc:postgresql://${HOST}:5434/${POSTGRES_DATABASE}
+    url: jdbc:postgresql://${HOST}:5432/${POSTGRES_DATABASE}
     username: ${POSTGRES_USERNAME}
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
   liquibase:
-    change-log: classpath:db/changelog/db.changelog-master.yaml
+    change-log: classpath:db/changelog/db.changelog-master.yml
 management:
   tracing:
     enabled: true
@@ -47,3 +45,8 @@ spring:
       format_sql: true
   liquibase:
     change-log: classpath:/db/changelog/changeset/test/db.changelog-master-test.yml
+management:
+  endpoints:
+    web:
+      exposure:
+        include: liquibase, health, mappings
