--- a/e2e/src/test/resources/application.yml
+++ b/e2e/src/test/resources/application.yml
@@ -1,5 +1,5 @@
 product-service:
   ssl:
     trust-store: classpath:security/dev_product_service_truststore.p12
-    trust-store-password: product_service_dev
+    trust-store-password: securepassword
     version: V_1_2
