ISSUE-25: E2E Testing Application. Cucumber test configuration is ready and working.

--- a/e2e/build.gradle
+++ b/e2e/build.gradle
@@ -58,6 +58,12 @@ openApiGenerate {
             generateClientAsBean          : "true",
             additionalModelTypeAnnotations: "@lombok.AllArgsConstructor; @lombok.Builder"
     ])
+    typeMappings = [
+            Date: "Instant"
+    ]
+    importMappings = [
+            "java.util.Date": "java.time.Instant"
+    ]
 }
 
 compileJava.dependsOn tasks.named("openApiGenerate")
