--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,11 @@ management:
   endpoints:
     web:
       exposure:
-        include: liquibase, health
+        include: liquibase, health, prometheus
+    distribution:
+      percentiles-histogram:
+        "[http.server.requests]": true
+
 
 springdoc:
   show-actuator: true
@@ -24,15 +28,15 @@ server:
   port: 8080
   error:
     include-message: always
-  ssl:
-    enabled: true
-    key-store-type: PKCS12
-    key-store: classpath:security/dev_product_service_keystore.p12
-    key-store-password: securepassword
-    protocol: TLS
-    enabled-protocols: TLSv1.2
-    trust-store: classpath:security/dev_product_service_truststore.p12
-    trust-store-password: securepassword
+#  ssl:
+#    enabled: true
+#    key-store-type: PKCS12
+#    key-store: classpath:security/dev_product_service_keystore.p12
+#    key-store-password: securepassword
+#    protocol: TLS
+#    enabled-protocols: TLSv1.2
+#    trust-store: classpath:security/dev_product_service_truststore.p12
+#    trust-store-password: securepassword
 
 ---
 spring:
